syntax = "proto3";

package vchain;

message Parameter
{
  bytes data = 1;
}

message Object
{
  bytes data = 1;
}

message BlockHeader
{
  bytes data = 1;
}

message BlockData
{
  bytes data = 1;
}

message IntraIndexNode
{
  bytes data = 1;
}

message SkipListNode
{
  bytes data = 1;
}

message RawObject
{
  repeated uint32 v_data = 1;
  repeated string w_data = 2;
}

message TxAddObjs
{
  repeated RawObject objs = 1;
}

message TxSetParam
{
  repeated int32 v_bit_len = 1;
  bool is_acc2 = 2;
  bool intra_index = 3;
  int32 skip_list_max_level = 4;
}
